@startuml

!theme plain
top to bottom direction
skinparam linetype ortho

entity users {
   id: varchar <<PK>>
   email: varchar(255)
   is_confirm: boolean() not null default false
   name: varchar(255) not null
   password: varchar(255) not null
   created_at: timestamp() default now
   updated_at: timestamp() default now
}

entity roles {
   id: varchar <<PK>>
   name: varchar(255) not null
   created_at: timestamp() default now
   updated_at: timestamp() default now
}

entity users_roles {
   user_id: varchar references users(id)
   role_id: varchar references roles(id)
   created_at: timestamp() default now
   updated_at: timestamp() default now
}

entity list_movie_user {
    id: varchar <<PK>>
    name: varchar(255) not null
    description: varchar(255)
    is_private: boolean() default false
    movies_series: jsonb()
    user_id: varchar references users(id)
    created_at: timestamp() default now
    updated_at: timestamp() default now
}

users ||..|{users_roles
roles ||..|{users_roles
users ||..|{list_movie_user

@enduml
